--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,50 @@
     transform: rotate(360deg);
   }
 }
+
+.main-container{
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  height: 100vh;
+
+}
+.heading{
+  text-align: center;
+}
+.game{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+.game-board{
+  /* border: 1px solid black; */
+  width: 30%;
+  height: 40%;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  font-size: 25px;
+}
+.status{
+  margin-bottom: 20px;
+}
+.square{
+  padding: 25px 25px;
+  font-size: 20px;
+  font-weight: bold;
+  margin: 5px;
+  width: 80px;
+  height: 80px;
+}
+.board-row{
+  
+}
+button{
+  outline: none;
+  border: none;
+  box-shadow: 0px 0px 4px black;
+}
